syntax = "proto3";

option csharp_namespace = "AnalysisService.Protos";

package analysis;

message DataRequest {
  string source = 1;
  repeated double values = 2;
}

message AnalysisResult {
  double mean = 1;
  double stddev = 2;
  string pattern = 3;
}

service DataAnalysis {
  rpc Analyze (DataRequest) returns (AnalysisResult);
}
